# nubook

./: 002-installation.md  005-quick-tour.md  006-moving-around.md  007-thinking-in-nu.md  012-pipelines.md  013-working-with-strings.md  014-working-with-lists.md  016-working-with-records.md  019-variables.md  020-control-flow.md  022-environment.md  024-coming-from-bash.md  025-aliases.md  026-scripts.md  028-plugins.md  029-parallelism.md  030-dataframes.md  032-creating-errors.md  033-overlays.md  034-sorting.md  035-testing.md  040-custom-completions.md  042-coming-from-cmd.md  044-stdout-stderr-exit-codes.md  046-externs.md  048-metadata.md  049-standard-library.md  051-nushell-map-imperative.md  052-nushell-map-functional.md  053-nushell-operator-map.md  README.md
Advanced-Topics/: 031-explore.md  036-style-guide.md
Fundamentals/: 009-nu-fundamentals.md  010-types-of-data.md  011-loading-data.md  015-custom-commands.md  017-working-with-tables.md  018-navigating-structured-data.md
Getting-Started/: 001-introduction.md  003-default-shell.md  004-getting-started.md  008-nushell-cheat-sheet.md
Programming/: 021-configuration.md  023-modules.md  027-running-externals.md
Reference/: 050-nushell-map.md
Shell-Features/: 037-line-editor.md  038-hooks.md  039-background-jobs.md  041-coloring-theming.md  (+3 more)
nushell-tui/: Cargo.toml  build.sh  check.sh
nushell-tui/src/: main.rs
nushell-tui/src/executor/: mod.rs
nushell-tui/src/hints/: mod.rs
nushell-tui/src/lesson/: mod.rs  parser.rs
nushell-tui/src/progress/: mod.rs
nushell-tui/src/ui/: app.rs
